meta tags added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A simple web-based rich text editor built with HTML, CSS, and JavaScript.">
+  <meta property="og:title" content="Simple Rich Text Editor by Umer Shuja">
+  <meta property="og:description" content="Try out this lightweight in-browser editor with formatting features.">
+  <meta property="og:url" content="https://umershujadev.github.io/text-editor/">
+  <meta property="og:type" content="website">
+
   <title>Simple Rich Text Editor by Umer Shuja</title>
   <style>
     body {
